--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Happy Birthday Urmila ❤</title>
+    <title>Happy Birthday Preet ❤</title>
 
     <!-- Link CSS Style.css file-->
 
@@ -56,18 +56,18 @@
         </div>
 
         <div class="row">
-          <span>U</span>
+          <span>P</span>
+          <span>r</span>
+          <span>e</span>
+          <span>e</span>
+          <span>t</span>
+          <span>y</span>
+          <span>S</span>
+          <span>h</span>
+          <span>a</span>
           <span>r</span>
           <span>m</span>
-          <span>i</span>
-          <span>l</span>
           <span>a</span>
-          <span>P</span>
-          <span>a</span>
-          <span>n</span>
-          <span>d</span>
-          <span>e</span>
-          <span>y</span>
         </div>
       </div>
     </div>
